--- a/src/com.cpp.calypso.proyecto.entityframework/com.cpp.calypso.proyecto.entityframework.csproj
+++ b/src/com.cpp.calypso.proyecto.entityframework/com.cpp.calypso.proyecto.entityframework.csproj
@@ -165,6 +165,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mapping\ArchivoMap.cs" />
     <Compile Include="Mapping\CatalogoMap.cs" />
     <Compile Include="Mapping\ColaboradorMap.cs" />
     <Compile Include="Mapping\ConsumoMap.cs" />
@@ -172,11 +173,16 @@
     <Compile Include="Mapping\ConsumoViandaMap.cs" />
     <Compile Include="Mapping\ConsumoViandaQrMap.cs" />
     <Compile Include="Mapping\ContratoProveedorMap.cs" />
+    <Compile Include="Mapping\DetalleDistribucionMap.cs" />
+    <Compile Include="Mapping\DistribucionViandaMap.cs" />
     <Compile Include="Mapping\EmpresaMap.cs" />
     <Compile Include="Mapping\FooMap.cs" />
     <Compile Include="Mapping\LocacionMap.cs" />
+    <Compile Include="Mapping\MenuProveedorMap.cs" />
+    <Compile Include="Mapping\OpcionComidaMao.cs" />
     <Compile Include="Mapping\ProveedorMap.cs" />
     <Compile Include="Mapping\SolicitudViandaMap.cs" />
+    <Compile Include="Mapping\TipoAccionEmpresaMap.cs" />
     <Compile Include="Mapping\TipoCatalogoMap.cs" />
     <Compile Include="Mapping\TipoOpcionComidaMap.cs" />
     <Compile Include="Mapping\ZonaMap.cs" />
