--- a/src/com.cpp.calypso.web/Web.config
+++ b/src/com.cpp.calypso.web/Web.config
@@ -92,22 +92,22 @@ Referencia:
    <!--Septiembre: Autentificacion Directorio Activo -->
 
     <!--Opciones: LDAP / AD -->
-    <add key="Security.option.userExternal" value="LDAP"/>
+    <add key="Security.option.userExternal" value="LDAP" />
 
     <!--Configuracion : AD -->
-    <add key="Security.byPassPassword" value="true"/>
-    <add key="Security.ad.domain" value="domain"/>
-    <add key="Security.ad.user" value="user"/>
-    <add key="Security.ad.password" value="password"/>
+    <add key="Security.byPassPassword" value="true" />
+    <add key="Security.ad.domain" value="domain" />
+    <add key="Security.ad.user" value="user" />
+    <add key="Security.ad.password" value="password" />
 
 
     <!--Configuracion : LDAP -->
-    <add key="Security.ldap.domain" value="LDAP://www.zflexldap.com:389"/>
-    <add key="Security.ldap.conection" value="LDAP://www.zflexldap.com:389"/>
-    <add key="Security.ldap.user" value="cn=ro_admin,ou=sysadmins,dc=zflexsoftware,dc=com"/>
-    <add key="Security.ldap.password" value="zflexpass"/>
-    <add key="Security.ldap.AttributeMapUsername" value="uid"/>
-    <add key="Security.ldap.filterSearchUser" value="({0}={1})"/>
+    <add key="Security.ldap.domain" value="LDAP://www.zflexldap.com:389" />
+    <add key="Security.ldap.conection" value="LDAP://www.zflexldap.com:389" />
+    <add key="Security.ldap.user" value="cn=ro_admin,ou=sysadmins,dc=zflexsoftware,dc=com" />
+    <add key="Security.ldap.password" value="zflexpass" />
+    <add key="Security.ldap.AttributeMapUsername" value="uid" />
+    <add key="Security.ldap.filterSearchUser" value="({0}={1})" />
     <!--
     //None = 0,
     //Secure = 1,
@@ -121,15 +121,12 @@ Referencia:
     //Delegation = 256,
     //ServerBind = 512
     -->
-    <add key="Security.ldap.authenticationType" value="512"/>
+    <add key="Security.ldap.authenticationType" value="512" />
 
 
 
     <!--Septiembre: Auditoria -->
-    <add key="Security.audit.configuration" value="
-         [{&quot;Entidad&quot;:&quot;ParametroSistema&quot;,&quot;Propiedades&quot;:[&quot;Valor&quot;, &quot;Codigo&quot; ]},{&quot;Entidad&quot;:&quot;Rol&quot;,&quot;Propiedades&quot;:[&quot;Codigo&quot;,&quot;EsAdministrador&quot;,&quot;EsExterno&quot;,&quot;Nombre&quot;,&quot;Permisos&quot;]},
-         {&quot;Entidad&quot;:&quot;Usuario&quot;,&quot;Propiedades&quot;:[&quot;Nombres&quot;,&quot;Apellidos&quot;,&quot;Cuenta&quot;,&quot;Correo&quot;,&quot;Estado&quot;,&quot;Roles&quot;,&quot;Modulos&quot;]}
-         ]"/>
+    <add key="Security.audit.configuration" value="          [{&quot;Entidad&quot;:&quot;ParametroSistema&quot;,&quot;Propiedades&quot;:[&quot;Valor&quot;, &quot;Codigo&quot; ]},{&quot;Entidad&quot;:&quot;Rol&quot;,&quot;Propiedades&quot;:[&quot;Codigo&quot;,&quot;EsAdministrador&quot;,&quot;EsExterno&quot;,&quot;Nombre&quot;,&quot;Permisos&quot;]},          {&quot;Entidad&quot;:&quot;Usuario&quot;,&quot;Propiedades&quot;:[&quot;Nombres&quot;,&quot;Apellidos&quot;,&quot;Cuenta&quot;,&quot;Correo&quot;,&quot;Estado&quot;,&quot;Roles&quot;,&quot;Modulos&quot;]}          ]" />
 
 
   </appSettings>
