--- a/src/com.cpp.calypso.proyecto.aplicacion/packages.config
+++ b/src/com.cpp.calypso.proyecto.aplicacion/packages.config
@@ -7,6 +7,7 @@
   <package id="Castle.LoggingFacility" version="4.1.0" targetFramework="net461" />
   <package id="Castle.Windsor" version="4.1.0" targetFramework="net461" />
   <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="2.0.2" targetFramework="net461" />
   <package id="Microsoft.Extensions.Caching.Memory" version="2.0.2" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
