--- a/src/com.cpp.calypso.webapi/com.cpp.calypso.webapi.csproj
+++ b/src/com.cpp.calypso.webapi/com.cpp.calypso.webapi.csproj
@@ -390,6 +390,7 @@
   <ItemGroup>
     <Compile Include="Api\Controllers\Models\LoginModel.cs" />
     <Compile Include="Api\Controllers\Models\SincronizacionModel.cs" />
+    <Compile Include="Api\Controllers\QueryController.cs" />
     <Compile Include="Api\Controllers\RolController.cs" />
     <Compile Include="Api\Controllers\SincronizacionController.cs" />
     <Compile Include="Api\Controllers\TestController.cs" />
@@ -441,6 +442,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Extensions\" />
+    <Folder Include="Views\Query\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
