--- a/src/com.cpp.calypso.proyecto.entityframework/com.cpp.calypso.proyecto.entityframework.csproj
+++ b/src/com.cpp.calypso.proyecto.entityframework/com.cpp.calypso.proyecto.entityframework.csproj
@@ -165,6 +165,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mapping\AccesoTemporalMap.cs" />
     <Compile Include="Mapping\ArchivoMap.cs" />
     <Compile Include="Mapping\CatalogoMap.cs" />
     <Compile Include="Mapping\ColaboradorMap.cs" />
@@ -181,6 +182,8 @@
     <Compile Include="Mapping\MenuProveedorMap.cs" />
     <Compile Include="Mapping\OpcionComidaMao.cs" />
     <Compile Include="Mapping\ProveedorMap.cs" />
+    <Compile Include="Mapping\RegistroAccesoMap.cs" />
+    <Compile Include="Mapping\RequisitoColaboradorMap.cs" />
     <Compile Include="Mapping\ServicioProveedorMap.cs" />
     <Compile Include="Mapping\ServicioRolMap.cs" />
     <Compile Include="Mapping\SolicitudViandaMap.cs" />
